--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity"
+    tools:context=".View.MainActivity"
     >
 
 
@@ -13,8 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="870dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/app_background" />
-
+        android:src="@drawable/main" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,17 +21,16 @@
         android:gravity="center"
         android:orientation="vertical">
 
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="-180dp"
+            android:layout_marginLeft="-10dp"
+            android:layout_marginTop="-170dp"
             android:fontFamily="@font/playfair_display"
-            android:gravity="center"
             android:padding="30dp"
             android:text="@string/measure_glycemia"
-            android:textColor="@color/black"
-            android:textSize="34sp"
+            android:textColor="@color/white"
+            android:textSize="30sp"
             android:textStyle="bold" />
 
         <TextView
@@ -43,6 +41,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="80dp"
             android:gravity="clip_horizontal"
+            android:textColor="@color/black"
             android:text="    Your Age : 0"
             android:textSize="24sp" />
 
@@ -50,6 +49,7 @@
             android:id="@+id/sbAge"
             android:layout_width="379dp"
             android:layout_height="wrap_content"
+
             android:layout_below="@id/AgeLabel"
             android:layout_marginTop="15dp"
             android:max="120"
@@ -57,7 +57,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="3dp"
+            android:layout_height="4dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/line_shape" />
 
@@ -70,6 +70,8 @@
             android:layout_marginTop="30dp"
             android:layout_marginEnd="100dp"
             android:gravity="center"
+            android:textColor="@color/black"
+
             android:text="  Are you fasting?"
             android:textSize="24sp" />
 
@@ -106,32 +108,29 @@
             android:id="@+id/edtGlycemia"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="40dp"
             android:hint="@string/val_glycemia"
             android:inputType="numberDecimal"
             android:textSize="25sp" />
 
         <Button
             android:id="@+id/btnConsulter"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn_shape"
-            android:onClick="calculer"
-            android:outlineAmbientShadowColor="@color/black"
-            android:text="CONSULTER"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/res"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/btnConsulter"
             android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:text="Result:"
-            android:textSize="24sp" />
+            android:layout_marginBottom="75dp"
+            android:background="@drawable/custom_button_background"
+            android:elevation="8dp"
+            android:onClick="calculer"
+            android:paddingStart="20dp"
+            android:paddingTop="5dp"
+            android:paddingEnd="20dp"
+            android:paddingBottom="10dp"
+            android:stateListAnimator="@null"
+            android:text="CONSULTER"
+            android:textColor="@android:color/white"
+            android:textSize="25sp" />
+
 
     </LinearLayout>
 </FrameLayout>
